--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,11 +1,20 @@
 <!-- Basic JavaScript-rendered Hello World -->
 <!-- http://localhost:3000/isolated/exercise/01.html -->
-
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
 <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
 <!--   📜 https://github.com/mdn/js-examples/tree/master/modules -->
+<body>
+   
+    <script type='module'>
+        const root = document.createElement('root');
+        document.body.appendChild(root);
+        const div = document.createElement('div');
+        div.innerText = 'Hello World!';
+        root.appendChild(div);
+    </script>
+</body>
 
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
 <!-- 🐨 Create a div -->
