--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -9,6 +9,8 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   -->
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
 
   <script type="module">
     const rootElement = document.getElementById('root')
@@ -16,14 +18,19 @@
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    // rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
     // 💰 The example in the markdown file should be a good hint for you.
+  
+    const helloSpan = React.createElement('span', {},'Hello');
+    const worldSpan = React.createElement('span', {}, 'World');
+    const reactElement = React.createElement('div', {id: 'element-id', children: [helloSpan, ' ', worldSpan], className: 'container'})
+    ReactDOM.render(reactElement, rootElement)
   </script>
 </body>
