--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,16 +6,40 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
+
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+
+    // const PropTypes = {
+    //   string(props, propName, componentName) {
+    //     if (typeof props[propName] !== 'string') {
+    //       return new Error(`Hey the component ${componentName} needs the prop ${propName} to be a string`);
+    //     }
+    //   },
+    // }
+    
+    function Message({subject, greeting}) {
+    return (
+      <div className="message">
+        {greeting}, {subject}
+      </div>
+    )
+  }
+
+  Message.propTypes = {
+    subject: PropTypes.string.isRequired,
+    greeting: PropTypes.string.isRequired,
+  }
+    
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
-      </div>
+        <Message greeting="Hello" subject="World" />
+        <Message greeting="GoodBye" subject="World" />
+        </div>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
